--- a/action.yml
+++ b/action.yml
@@ -106,12 +106,7 @@ runs:
       uses: psf/black@stable
       id: action_black
       with:
-        options: "--config ${{ inputs.root }}/${{ inputs.toml }} ${{ inputs.root }}/${{ inputs.workdir }} ${{ inputs.root }}/tests"
-    - if: steps.action_black.outputs.is_formatted == 'true'
-      uses: reviewdog/action-suggester@v1
-      with:
-        tool_name: blackfmt
-        fail_on_error: true
+        options: "--config ${{ inputs.root }}/${{ inputs.toml }} ${{ inputs.root }}/${{ inputs.workdir }} ${{ inputs.root }}/tests --check --verbose"
 
     - if: ${{ inputs.bandit  == 'true' }}
       uses: dciborow/action-bandit@0.0.2
